correctly mergine app changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
-
+groundControl/groundControl.xcodeproj/project.xcworkspace/xcuserdata/robertce.xcuserdatad/UserInterfaceState.xcuserstate
+groundControl/groundControl.xcodeproj/project.pbxproj
 ExecutionBoard/nbproject/private/private.xml
 WiFiChip/WiFiDriver/privates.h
 /ExecutionBoard/build/
